# hardwarekey

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/PC/: main.c
src/RaspberryPi/: .main.c.swp
